# noctis

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  config.nox  meson.build
.github/workflows/: build.yml
config/: config.toml
docs/: keybindings.md
example/: config.nox  config.nox.example
examples/: catppuccin-mocha.toml  gruvbox.toml  minimal-no-gaps.toml  noctis.nox  nord.toml  noxwm-default.toml  rose-pine.toml
include/config/: config.hpp  parser.hpp
include/core/: output.hpp  server.hpp
include/input/: keyboard.hpp
include/layout/: column_layout.hpp  workspace.hpp
scripts/: patch_headers.sh
src/: config.cpp  config.hpp  input.cpp  input.hpp  keybinds.cpp  keybinds.hpp  layout.hpp  main.cpp  main.rs  noctis.c  noctis.cpp  output.cpp  output.hpp  seat.cpp  server.cpp  server.hpp  view.cpp
src/config/: config.cpp  mod.rs  parser.cpp
src/core/: mod.rs  output.cpp  server.cpp  state.rs  udev.rs  winit.rs  xdg_shell.cpp
src/input/: cursor.cpp  keyboard.cpp  mod.rs
src/layout/: column_layout.cpp  mod.rs  workspace.cpp
